# JobSpy

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
jobspy/: __init__.py  exception.py  model.py  util.py
jobspy/bayt/: __init__.py
jobspy/glassdoor/: __init__.py
jobspy/google/: __init__.py
jobspy/indeed/: __init__.py  util.py
jobspy/linkedin/: __init__.py  util.py
jobspy/naukri/: __init__.py  util.py
jobspy/ziprecruiter/: __init__.py
src/jobspy/: __init__.py
src/jobspy/scrapers/: __init__.py  exceptions.py  utils.py
src/jobspy/scrapers/bayt/: __init__.py
src/jobspy/scrapers/glassdoor/: __init__.py
src/jobspy/scrapers/google/: __init__.py
src/jobspy/scrapers/indeed/: __init__.py
src/jobspy/scrapers/linkedin/: __init__.py
src/jobspy/scrapers/ziprecruiter/: __init__.py
